Add useCollectionQuery usage code and subscription props

--- a/packages/hooks/src/useCollectionQuery/useCollectionQuery.mdx
+++ b/packages/hooks/src/useCollectionQuery/useCollectionQuery.mdx
@@ -35,6 +35,29 @@ data. For use with any lists populated by graphQL collections.
 
 ```tsx
 import { useCollectionQuery } from "@jobber/hooks";
+
+const {
+    data,
+    error,
+    refresh,
+    nextPage,
+    loadingRefresh,
+    loadingNextPage,
+    loadingInitialContent,
+    } = useCollectionQuery<ListQueryType, SubscriptionType>({
+        query: LIST_QUERY,
+        queryOptions: {
+            fetchPolicy: "network-only",
+        },
+        getCollectionByPath(items) {
+            return items.path.toCollection;
+        },
+        subscription: {
+            document: SUBSCRIPTION_QUERY,
+            getNodeByPath(items) {
+                return items.path.toNode
+            },
+    });
 ```
 
 <Playground>
