--- a/packages/components/src/Tabs/Tabs.mdx
+++ b/packages/components/src/Tabs/Tabs.mdx
@@ -13,10 +13,7 @@ import { Tabs, Tab } from ".";
 
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
-In Jobber tabs are used to alternate amongst related views within the same
-context.
-
-## Simple Example
+Tabs are used to alternate amongst related views within the same context.
 
 ```ts
 import { Tabs, Tab } from "@jobber/components/Tabs";
@@ -24,7 +21,7 @@ import { Tabs, Tab } from "@jobber/components/Tabs";
 
 <Playground>
   <Tabs>
-    <Tab label="Eggs" onClick={() => alert("I had eggs for breakfast.")}>
+    <Tab label="Eggs">
       🍳 Some eggs are laid by female animals of many different species,
       including birds, reptiles, amphibians, mammals, and fish, and have been
       eaten by humans for thousands of years.
@@ -34,11 +31,39 @@ import { Tabs, Tab } from "@jobber/components/Tabs";
       range of flavors, textures, and forms by coagulation of the milk protein
       casein.
     </Tab>
+    <Tab label="Berries">
+      🍓 A berry is a small, pulpy, and often edible fruit. Typically, berries
+      are juicy, rounded, brightly colored, sweet, sour or tart, and do not have
+      a stone or pit.
+    </Tab>
   </Tabs>
 </Playground>
 
-## Tab Props
+## Props
 
 <Props of={Tab} />
 
----
+## Design & Usage Guidelines
+
+Use Tabs when you need to group related sub-groups of content and the user only
+needs to access one sub-group at a time.
+
+Do not use Tabs as a means of navigating the view or in lieu of a Table of
+Contents.
+
+## Related Components
+
+To show multiple groupings of content at once, use [Card](card).
+
+To allow the user to select one-of-many options in a form, use
+[RadioGroup](radio-group) or [Select](select).
+
+## Accessibility
+
+Tabs have known accessibility concerns, including:
+
+- the user cannot navigate between Tabs using the arrow keys
+  - this breaks a universal expectation for tabbed interfaces
+- the user cannot keyboard-navigate directly from the selected Tab into the
+  selected Tab content
+  - initial keypress of `tab` key or `command+option+right` focuses next Tab
