--- a/packages/components/src/Form/Form.mdx
+++ b/packages/components/src/Form/Form.mdx
@@ -6,7 +6,7 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
-import { useRef } from "react";
+import { useRef, useState } from "react";
 import { ComponentStatus } from "@jobber/docx";
 import { useFormState } from "@jobber/hooks";
 import { Form } from "@jobber/components/Form";
@@ -32,6 +32,7 @@ import { Form } from "@jobber/components/Form";
 <Playground>
   {() => {
     const [{ isDirty, isValid }, setFormState] = useFormState();
+    const [first, setFirst] = useState("");
     return (
       <Form
         onSubmit={() => alert("Submitted 🎉🎉🎉")}
@@ -41,6 +42,8 @@ import { Form } from "@jobber/components/Form";
           <InputText
             placeholder="First Name"
             name="firstName"
+            value={first}
+            onChange={setFirst}
             validations={{
               required: {
                 value: true,
