--- a/packages/hooks/src/useIsMounted/useIsMounted.mdx
+++ b/packages/hooks/src/useIsMounted/useIsMounted.mdx
@@ -4,4 +4,65 @@ menu: Hooks
 route: /hooks/use-is-mounted
 ---
 
-# ToDo
+import { Playground } from "docz";
+import { useEffect, useState } from "react";
+import { Button } from "@jobber/components/Button";
+import { useIsMounted } from "@jobber/hooks";
+
+# UseIsMounted
+
+`useIsMounted` is a generalized hook that upon initial loading triggers a
+`useLayoutEffect` that sets the `isMounted.current` to true when the component
+mounts. When the component unmounts, `useLayoutEffect` calls a cleanup function
+that sets `isMounted.current` to false.
+
+`useIsMounted` should be used on asyncronous calls to ensure the component is
+mounted before manipulating state on that component. Manipulating state on
+unmounted components can cause errors and memory leaks.
+
+```tsx
+import { useIsMounted } from "@jobber/hooks";
+```
+
+<Playground>
+  {() => {
+    function AlertMountedComponent() {
+      const isMounted = useIsMounted();
+      useEffect(() => {
+        setTimeout(() => {
+          if (isMounted.current) {
+            // only set state if the component is still mounted
+            console.log("The component is mounted");
+          } else {
+            console.log("The component is not mounted");
+          }
+        }, 10000);
+      }, []);
+      return <h4>I am the AlertMountedComponent</h4>;
+    }
+    const [shouldMount, setShouldMount] = useState(false);
+    let component = <></>;
+    if (shouldMount) {
+      component = <AlertMountedComponent />;
+    }
+    return (
+      <>
+        {component}
+        <Button
+          label={"Mount Component"}
+          onClick={() => {
+            setShouldMount(true);
+          }}
+        />
+        <Button
+          label={"Unmount Component"}
+          onClick={() => {
+            setShouldMount(false);
+          }}
+        />
+      </>
+    );
+  }}
+</Playground>
+
+---
