Remove prop list components from playgrounds

--- a/packages/hooks/src/useCollectionQuery/useCollectionQuery.mdx
+++ b/packages/hooks/src/useCollectionQuery/useCollectionQuery.mdx
@@ -126,18 +126,10 @@ const {
 
 ## Props
 
-<Playground>
-  {() => {
-    return <List items={propsList} />;
-  }}
-</Playground>
+<List items={propsList} />
 
 ## Subscription props
 
-<Playground>
-  {() => {
-    return <List items={subscriptionPropsList} />;
-  }}
-</Playground>
+<List items={subscriptionPropsList} />
 
 ---
