Make useCollectionQuery more appropriate

--- a/packages/hooks/src/useCollectionQuery/useCollectionQuery.mdx
+++ b/packages/hooks/src/useCollectionQuery/useCollectionQuery.mdx
@@ -22,8 +22,8 @@ import {
 
 # UseCollectionQuery
 
-`useCollectionQuery` is a generalized hook that that fetches a collection of
-data. For use with any lists populated by graphQL collections.
+`useCollectionQuery` is a generalized hook that that aids in the interaction of
+data collections. For use with any lists populated by graphQL collections.
 
 ```tsx
 import { useCollectionQuery } from "@jobber/hooks";
