--- a/packages/components/src/Spinner/Spinner.mdx
+++ b/packages/components/src/Spinner/Spinner.mdx
@@ -61,7 +61,7 @@ The following built-in properties help `Spinner` convey its' role effectively:
 
 - `role="alert"` allows the `Spinner` to be announced as an alert feedback element
 - `aria-busy={true}` informs the user that the view is busy, setting the expectation that they cannot interact for the time being
-- `aria-label="loading"` reads out "Loading" to assistive teach, adding context as to _why_ the view is busy
+- `aria-label="loading"` reads out "Loading" to assistive tech, adding context as to _why_ the view is busy
 
 ___
 
