Add return values to useCollectionQuery mdx

--- a/packages/hooks/src/useCollectionQuery/useCollectionQuery.mdx
+++ b/packages/hooks/src/useCollectionQuery/useCollectionQuery.mdx
@@ -18,6 +18,7 @@ import {
   styles,
   propsList,
   subscriptionPropsList,
+  returnValues,
 } from "./mdxUtils";
 
 # UseCollectionQuery
@@ -132,5 +133,9 @@ const {
 ## Subscription props
 
 <List items={subscriptionPropsList} />
+
+## Return values
+
+<List items={returnValues} />
 
 ---
