add grammar guide and move product vocab to content section

--- a/docs/content/product-vocabulary.mdx
+++ b/docs/content/product-vocabulary.mdx
@@ -1,7 +1,7 @@
 ---
-name: Product Vocabulary
-menu: Guides
-route: /guides/product-vocabulary
+name: Product vocabulary
+menu: Content
+route: /content/product-vocabulary
 ---
 
 # Product Vocabulary
