--- a/docs/content/voice-and-tone.mdx
+++ b/docs/content/voice-and-tone.mdx
@@ -1,12 +1,50 @@
 ---
-name: Voice and tone
+name: Voice & tone
 menu: Content
 route: /content/voice-and-tone
 ---
 
-# Voice and tone
+# Voice & tone
 
-## Active voice
+To keep our messages aligned and consistent, we have some guidelines for the
+voice and tone of our language. Our **voice** is like our personality and it
+stays constant, and our **tone** can vary to fit a context or mood. Both of them
+should affect what we say and how we say it.
+
+More than anything else, language in Jobber products should be functional. This
+means clarity comes first. When writing for product, our goal is to make our
+users’ lives simpler and more productive by guiding them to what they want to do
+as quickly and smoothly as possible. Try to give them the information they need
+in that moment—no more and no less.
+
+Our full
+[Voice & Tone guidelines](https://docs.google.com/document/d/1FlJ-H1iYvo9T_InmE_u7dhgFjtf1ISdcvS5WWwjB6Zw/edit?usp=sharing)
+are available for internal use. This guide breaks down some of the
+product-focused principles with specific examples of what to do (and what not to
+do).
+
+## Guidelines
+
+### Punctuation
+
+You don't need to end a single sentence with a period in microcopy such as error
+messages or form instructions.
+
+| ✅ **Do **       | ❌ **Don't**      |
+| ---------------- | ----------------- |
+| Enter your email | Enter your email. |
+
+### Don't be technical
+
+Don’t use words that would mean nothing to a stranger on the street. We’re here
+to make our users’ lives simpler and less stressful, not to teach them about
+computer science.
+
+| ✅ **Do **                    | ❌ **Don't**                              |
+| ----------------------------- | ----------------------------------------- |
+| No search results for "Brian" | Could not detect match for string "Brian" |
+
+### Active voice
 
 Lead with the verb in UX copy so that the user understands the action they need
 to take, rather than leading with the item they must take action on.
