--- a/docs/content/voice-and-tone.mdx
+++ b/docs/content/voice-and-tone.mdx
@@ -27,8 +27,8 @@ do).
 
 ### Punctuation
 
-You don't need to end a single sentence with a period in microcopy such as error
-messages or form instructions.
+Don't use a period in microcopy such as error messages, list items, or form
+instructions.
 
 | ✅ **Do **       | ❌ **Don't**      |
 | ---------------- | ----------------- |
@@ -46,15 +46,15 @@ computer science.
 
 ### Active voice
 
-Lead with the verb in UX copy so that the user understands the action they need
-to take, rather than leading with the item they must take action on.
+Lead with the action so that the user understands the action they need to take,
+rather than leading with the item they must take action on.
 
 | ✅ **Do **                                         | ❌ **Don't**                                                |
 | -------------------------------------------------- | ----------------------------------------------------------- |
 | Turn on **show pricing** to give access to reports | **Show pricing** must be turned on in order to view reports |
 
-The user is the implied subject in UX copy so there is no need to include an
-explicit subject such as "You must... ".
+The user is the implied subject in most scenarios so there is no need to include
+an explicit subject such as "You must... ".
 
 | ✅ **Do **                                         | ❌ **Don't**                                                   |
 | -------------------------------------------------- | -------------------------------------------------------------- |
