--- a/docs/guides/frontent-style.mdx
+++ b/docs/guides/frontent-style.mdx
@@ -65,7 +65,7 @@ Missing rationale and disabling rules for a whole file.
 import React, { ReactText, useState } from "react";
 ```
 
-### Chooseing Libraries
+### Choosing Libraries
 
 ### `function` vs arrow function
 
