--- a/docs/guides/frontent-style.mdx
+++ b/docs/guides/frontent-style.mdx
@@ -169,3 +169,11 @@ type MyInterface = {
 -->
 
 ### CSS
+
+Wherever possible use Atlantis `design` tokens. 
+
+#### Units
+
+For size units, use the appropriate [Spacing](/spacing) variables. Do not use rems, ems, or hard-coded pixel values, as Atlantis is built using variables to allow for consistent re-flow as the browser scales.
+
+If you require a size that is larger than the Spacing variables, or falls somewhere in between, use the CSS `calc` function with Atlantis spacing values in a custom property in your file to avoid magic numbers. For example:
