--- a/docs/guides/frontent-style.mdx
+++ b/docs/guides/frontent-style.mdx
@@ -1,7 +1,7 @@
-## @@ -0,0 +1,176 @@
-
-name: Frontend Styleguide menu: Guides route: /guides/frontend-style
-
+---
+name: Frontend Styleguide
+menu: Guides
+route: /guides/frontend-style
 ---
 
 import { Playground } from "docz";
@@ -170,10 +170,24 @@ type MyInterface = {
 
 ### CSS
 
-Wherever possible use Atlantis `design` tokens. 
+Wherever possible use Atlantis `design` tokens.
 
 #### Units
 
-For size units, use the appropriate [Spacing](/spacing) variables. Do not use rems, ems, or hard-coded pixel values, as Atlantis is built using variables to allow for consistent re-flow as the browser scales.
+For size units, use the appropriate [Spacing](/spacing) variables. Do not use
+rems, ems, or hard-coded pixel values, as Atlantis is built using variables to
+allow for consistent re-flow as the browser scales.
 
-If you require a size that is larger than the Spacing variables, or falls somewhere in between, use the CSS `calc` function with Atlantis spacing values in a custom property in your file to avoid magic numbers. For example:
+If you require a size that is larger than the Spacing variables, or falls
+somewhere in between, use the CSS `calc` function with Atlantis spacing values
+in a custom property in your file to avoid magic numbers. For example:
+
+```css
+:root {
+  --drawer-width: calc(var(--space-base) * 17.5);
+}
+
+.container {
+  width: var(--drawer-width);
+}
+```
