--- a/packages/design/src/Elevations.mdx
+++ b/packages/design/src/Elevations.mdx
@@ -13,10 +13,6 @@ In Atlantis, our web components use elevation to specify position on the z-axis,
 with shadows separately responsible for conveying that depth. Our mobile
 components combine these two concepts in keeping with Android and iOS patterns.
 
-> Our web implementation was built first and didn't consider these shared
-> concerns at the time but we may reconcile web and mobile concepts in the
-> future.
-
 Generally speaking, the "higher" an element sits in the z-axis, the broader its'
 shadow should spread, to reflect diffusion in the distance between the element
 and the ground. As an element gets nearer to the ground, or "lower", the
@@ -26,29 +22,6 @@ We also include a _slight_ y-axis offset of elevation shadows to imply that the
 light source is coming from an angle slightly over the head of a user looking
 directly into the screen.
 
-## Web
-
-The following table lists all elements that has a z-index specified on it.
-
-export function Value({ of: type }) {
-  const styles = getComputedStyle(document.documentElement);
-  const getValue = styles.getPropertyValue(`--elevation-${type}`);
-  return <React.Fragment>{getValue}</React.Fragment>;
-}
-
-| Component        | Value                  |
-| :--------------- | :--------------------- |
-| Form field label | <Value of="base" />    |
-| Menu             | <Value of="menu" />    |
-| Modal            | <Value of="modal" />   |
-| Tooltip          | <Value of="tooltip" /> |
-
-## Mobile
-
-For mobile designs, the concept of elevation applies to both shadows and
-hierarchy of the element along the z-index. Currently we have 3 defined levels
-of elevation:
-
 ### Low
 
 A low element may have a slight elevation, but is not necessarily something that
@@ -56,15 +29,76 @@ will glide across the surface. A card that holds interactive controls within
 itself, but that does not have any interactions itself, may be useful to
 indicate as "low".
 
+<Example of="low" />
+
 ### Base
 
 This shadow should be used for most instances of shadows, as it conveys an
 elevation that is noticeable but not aggressively close to the user. An element
 with a base elevation is likely interactive, and this level can indicate and
-invite the use of gesture controls.
+invite the use of gesture controls in a mobile app.
+
+<Example of="base" />
 
 ### High
 
 High elements should be elements that float overtop the entire interface, likely
 with a fixed position. The "high" elevation indicates that the element has
-broken the plane of the view.
+broken the plane of the view. A good example for web would be
+[Toast](/components/toast).
+
+<Example of="high" />
+
+## Web
+
+export function Value({ of: type }) {
+  const styles = getComputedStyle(document.documentElement);
+  const getValue = styles.getPropertyValue(`--elevation-${type}`);
+  return <React.Fragment>{getValue}</React.Fragment>;
+}
+
+### Z-index elevation
+
+The following table lists all elements that have a z-index specified.
+
+| Component        | Value                  |
+| :--------------- | :--------------------- |
+| Form field label | <Value of="base" />    |
+| Menu             | <Value of="menu" />    |
+| Modal            | <Value of="modal" />   |
+| Tooltip          | <Value of="tooltip" /> |
+| Toast            | <Value of="toast" />   |
+
+export function Example({ of: shadow }) {
+  const style = {
+    width: "var(--space-largest)",
+    height: "var(--space-largest)",
+    backgroundColor: "var(--color-white)",
+    boxShadow: `var(--shadow-${shadow})`,
+  };
+  return <div style={style} />;
+}
+
+export function Elevation({ of: shadow }) {
+  const element = document.createElement("div");
+  element.style.boxShadow = `var(--shadow-${shadow})`;
+  document.body.appendChild(element);
+}
+
+### Shadow elevation
+
+These are the box-shadows rendered to signify elevation on given UI elements;
+they map to our low/base/high pattern.
+
+| Name            | Visual                |
+| :-------------- | :-------------------- |
+| `--shadow-low`  | <Example of="low" />  |
+| `--shadow-base` | <Example of="base" /> |
+| `--shadow-high` | <Example of="high" /> |
+
+## Mobile
+
+For mobile designs, the concept of elevation applies to both shadows and
+hierarchy of the element along the z-index. The technical implementation differs
+slightly between iOS and Android, as Android accepts a single "depth" value,
+while iOS offers more customizable configuration similar to CSS.
