newline some divs per prettier

--- a/packages/design/src/Colors.mdx
+++ b/packages/design/src/Colors.mdx
@@ -349,8 +349,8 @@ such as a [Modal](/components/modal)’s appearance.
   box-shadow: var(--shadow-base);"
 ></div>
 
-A transparent version of [Surface](#surface), this masks an area of the
-interface to indicate inactivity (i.e. waiting for updates)
+A transparent version of [Surface](#surface), this masks an area of the nterface
+to indicate inactivity (i.e. waiting for updates)
 
 ### Borders
 
@@ -410,6 +410,6 @@ caution, it’s _bright!_
 <br />
 <br />
 
-## Swatches
+## Swatch List
 
 <ColorSwatches colors={colors.customProperties} />
