add a11y issue note

--- a/packages/design/src/Colors.mdx
+++ b/packages/design/src/Colors.mdx
@@ -66,7 +66,12 @@ text content already present.
 ### Interactive
 
 Use these colors in buttons and form controls to communicate the presence and
-meaning of interaction.
+meaning of interaction. In cases such as [Buttons](/components/button) where the
+interactive color is functioning as a background color or the text color, the
+alternative color should be `--color-white`\*.
+
+_\*This is a known contrast issue in the case of Interactive/White, as we have
+currently tied our interactive color to our brand color._
 
 #### Interactive
 
