the "low" end theory

--- a/packages/design/src/Elevations.mdx
+++ b/packages/design/src/Elevations.mdx
@@ -27,9 +27,8 @@ directly into the screen.
 <Example of="low" />
 
 A low element may have a slight elevation, but is not necessarily something that
-will glide across the surface. A card that holds interactive controls within
-itself, but that does not have any interactions itself, may be useful to
-indicate as "low".
+will glide across the surface. A basic card on mobile that is not tappable would
+be represented as having a "low" elevation.
 
 ### Base
 
