--- a/packages/design/src/Elevations.mdx
+++ b/packages/design/src/Elevations.mdx
@@ -103,6 +103,5 @@ they map to our low/base/high pattern.
 ## Mobile
 
 For mobile designs, the concept of elevation applies to both shadows and
-hierarchy of the element along the z-index. The technical implementation differs
-slightly between iOS and Android, as Android accepts a single "depth" value,
-while iOS offers more customizable configuration similar to CSS.
+hierarchy of the element along the z-index. Android accepts a single "elevation"
+value, while iOS accepts more granular shadow values similar to CSS.
